
set( PROJECT_OUTPUT comtest )

ADD_EXECUTABLE( ${PROJECT_OUTPUT} 
${FIRST_GCC_PROGRAM_SOURCE} 
  comtest.c
${LAST_GCC_PROGRAM_SOURCE} 
)
TARGET_LINK_LIBRARIES( ${PROJECT_OUTPUT} ${SACK_LIBRARIES} winmm.lib )
string( REPLACE "." "_" TARGET_LABEL ${PROJECT_OUTPUT} )

SET_TARGET_PROPERTIES(${PROJECT_OUTPUT} PROPERTIES
                  COMPILE_FLAGS  ""
                  COMPILE_DEFINITIONS "WINDOWS_MODE;TARGET_LABEL=${TARGET_LABEL};TARGETNAME=\"${PROJECT_OUTPUT}${CMAKE_EXECUTABLE_SUFFIX}\""
                  FOLDER "Program"
)

INSTALL_DEFAULT_DEST( ${PROJECT_OUTPUT} )
